# symphony

./: .devflow-config.json  .gitignore  CODEMAP.md  HELLO_SYMPHONY.md  LOCAL-PR-REVIEW.md  README.md  REFACTOR-ORCHESTRATOR-CONTRACT.md  SPEC.md
.github/workflows/: deploy.yml  size-budget.yml  symphony-agent-gate.reusable.yml
docker/schoolsout-base/: Dockerfile
docker/schoolsout-base/qa/: qa_devserver.py  qa_helpers.py  qa_publish.py  qa_session.py  qa_vendor.py  test_qa_devserver.py  test_qa_helpers.py  test_qa_publish.py
docs/plans/: 2026-04-30-symphony-ui-mvp-plan.md  symphony-ui-mvp-design.md
docs/spec/: 2026-05-17-agent-native-repo-design.md
elixir/: .gitignore  CHANGELOG.md  CONSULTANT-GUIDE.md  DEPLOYMENT.md  README.md  WORKFLOW.md  WORKFLOW.schools-out.md  mix.exs
elixir/config/: config.exs  test.exs
elixir/docs/: github-app-setup.md  token_accounting.md
elixir/lib/: symphony_elixir.ex
elixir/priv/agent_shim/: .gitignore  README.md  pyproject.toml
elixir/priv/agent_shim/scripts/: smoke_real.py  test_smoke_real.py
elixir/priv/agent_shim/src/symphony_agent_shim/: __main__.py  auth.py  auth_github_app.py  bootstrap_github_app.py  framing.py  handshake.py  protocol.py  sandbox.py  server.py  thread.py  tools.py  turn.py
elixir/priv/agent_shim/src/symphony_agent_shim/guardrails/: __init__.py  file_size_check.py  pre_edit_overwrite_guard.py  pre_push_gate.py  secrets_gate.py  tdd_enforcer.py
elixir/priv/agent_shim/tests/: test_auth.py  test_auth_github_app.py  test_bootstrap_github_app.py  test_framing.py  test_handshake.py  test_protocol.py  test_sandbox.py  test_server_smoke.py  test_smoke.py  test_thread.py  test_thread_devflow.py  test_tools.py  test_turn.py
elixir/priv/agent_shim/tests/guardrails/: test_file_size_check.py  test_pre_edit_overwrite_guard.py  test_pre_push_gate.py  test_secrets_gate.py  test_tdd_enforcer.py
elixir/priv/agent_shim/tests/symphony_agent_shim/: test___init__.py  test___main__.py  test_server.py
scripts/: deploy.sh  provision_vps.sh
(+151 files in other folders)
