[project]
name = "symphony-agent-shim"
version = "0.1.0"
description = "JSON-RPC stdio shim translating Codex app-server protocol to claude-agent-sdk"
requires-python = ">=3.10"
dependencies = [
  "claude-agent-sdk>=0.1.0",
  "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/symphony_agent_shim"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
