[project]
name = "symphony-agent-shim"
version = "0.1.0"
description = "JSON-RPC stdio shim translating Codex app-server protocol to claude-agent-sdk"
requires-python = ">=3.12"
dependencies = [
  "claude-agent-sdk>=0.1.0",
  "anyio>=4.0",
  "PyJWT[crypto]>=2.8",
  "devflow-agent>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  # Used by tests to generate ephemeral RSA keypairs. Production already pulls
  # this in via PyJWT[crypto] but we list it explicitly so the test dep is
  # auditable.
  "cryptography>=42.0",
]

[project.scripts]
symphony-setup-github-app = "symphony_agent_shim.bootstrap_github_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/symphony_agent_shim"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.uv.sources]
devflow-agent = { path = "../../../../devflow-agent", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "scripts"]
pythonpath = ["src"]
